# movies-recommender-system

./: .gitignore  README.md  Railway.toml  app.py  pyproject.toml  render.yaml  requirements.txt  runtime.txt
app/: __init__.py  config.py
app/models/: recommender.py
app/routes/: download_models.py  main.py
app/services/: recommender_service.py
app/templates/: index.html
config/: config.py
models/: recommender.py
templates/: index.html
