[tool.poetry]
name = "movies-recommender-system"
version = "0.1.0"
description = ""
authors = ["kripanshu-anuragi <kripanshuanuragi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.5"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
